--- a/view/admin/courseCRUD/read.mustache
+++ b/view/admin/courseCRUD/read.mustache
@@ -3,4 +3,5 @@
 <h5>Date:{{course.date}}</h5>
 <h5>Descrition;i</h5>
 <p>{{course.description}}</p>
+<form action="/admin/course/students/{{course._id}}" method="GET"><button role="menuitem" tabindex="-1" type="submit" class="block px-4 py-2 text-sm text-gray-700">Get Students for class</button></form>
 {{>admin.tail.shared}}
